// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayList should render a ClayList with classes 1`] = `<ul class="list-group show-quick-actions-on-hover elementClasses my-custom-class"></ul>`;

exports[`ClayList should render a ClayList with id 1`] = `<ul class="list-group show-quick-actions-on-hover" id="myId"></ul>`;

exports[`ClayList should render a ClayList with items 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with items with description 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with items with links 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with simple items 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">Photos</li>
  <li class="list-group-item list-group-item-flex">Videos</li>
</ul>
`;

exports[`ClayList should render a ClayList with simple items with links 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">Photos</li>
  <li class="list-group-item list-group-item-flex">Videos</li>
</ul>
`;

exports[`ClayList should render a selectable ClayList 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="folder" value="1" ref="input" type="checkbox">
          <span class="custom-control-label">
            <span class="custom-control-label-text sr-only">deselect</span>
          </span>
        </label>
      </div>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="folder" value="2" ref="input" type="checkbox">
          <span class="custom-control-label">
            <span class="custom-control-label-text sr-only">deselect</span>
          </span>
        </label>
      </div>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
</ul>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
`;

exports[`ClayList should render a selectable ClayList with circle icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-0">Folders</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-1">Recipes</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </p>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </p>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </p>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </p>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </p>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </p>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-2">Chefs</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Ferrán Adriá</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Gordon Ramsay</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Alberto Chicote</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with groups 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-0">Folders</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-1">Recipes</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </p>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </p>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </p>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </p>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </p>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </p>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-2">Chefs</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Ferrán Adriá</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Gordon Ramsay</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Alberto Chicote</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-0">Folders</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-1">Recipes</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </p>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </p>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </p>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </p>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </p>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </p>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-2">Chefs</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Ferrán Adriá</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Gordon Ramsay</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Alberto Chicote</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with label 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-0">Folders</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Photos</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-rounded sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Videos</p>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-1">Recipes</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </p>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </p>
      <p class="list-group-subtitle text-truncate">China</p>
      <div class="list-group-detail">
        <span class="label label-warning">
          <span class="label-item label-item-expand">Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </p>
      <p class="list-group-subtitle text-truncate">Spain</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </p>
      <p class="list-group-subtitle text-truncate">Italy</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </p>
      <p class="list-group-subtitle text-truncate">Toledo</p>
      <div class="list-group-detail">
        <span class="label label-warning">
          <span class="label-item label-item-expand">Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </p>
      <p class="list-group-subtitle text-truncate">Mexico</p>
      <div class="list-group-detail">
        <span class="label label-danger">
          <span class="label-item label-item-expand">Very Spicy</span>
        </span>
      </div>
    </div>
  </li>
  <li class="list-group-header">
    <p class="list-group-header-title" id="group-2">Chefs</p>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Ferrán Adriá</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Gordon Ramsay</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">Alberto Chicote</p>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with quick action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </p>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </p>
      <p class="list-group-subtitle text-truncate">China</p>
      <div class="list-group-detail">
        <span class="label label-warning">
          <span class="label-item label-item-expand">Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </p>
      <p class="list-group-subtitle text-truncate">Spain</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </p>
      <p class="list-group-subtitle text-truncate">Italy</p>
      <div class="list-group-detail">
        <span class="label label-success">
          <span class="label-item label-item-expand">No Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </p>
      <p class="list-group-subtitle text-truncate">Toledo</p>
      <div class="list-group-detail">
        <span class="label label-warning">
          <span class="label-item label-item-expand">Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="autofit-col">
      <span class="sticker sticker-circle sticker-primary">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-exclamation-circle" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="autofit-col autofit-col-expand">
      <p class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </p>
      <p class="list-group-subtitle text-truncate">Mexico</p>
      <div class="list-group-detail">
        <span class="label label-danger">
          <span class="label-item label-item-expand">Very Spicy</span>
        </span>
      </div>
    </div>
    <div class="autofit-col">
      <div class="quick-action-menu">
        <a aria-label="Remove" class=" component-action quick-action-item" href="#1" title="Remove">
          <svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a aria-label="Download" class=" component-action quick-action-item" href="#2" title="Download">
          <svg class="lexicon-icon lexicon-icon-download" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button">
          <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
            <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
      </div>
    </div>
  </li>
</ul>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Remove</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#2">Download</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
  </ul>
</div>
`;

exports[`ClayList should render the default markup 1`] = `<ul class="list-group show-quick-actions-on-hover"></ul>`;
